2004-03-19  Derek Price  <derek@ximbiot.com>

	* cvs.h (pathname_levels, previous_rev): Remove leading underscore from
	prototype arguments to avoid potential conflicts with implementations.

2004-03-18  Derek Price  <derek@ximbiot.com>

	* cvs.h (pathname_levels): Make string argument const.
	* subr.c (pathname_levels): Simplify function.

2004-03-17  Derek Price  <derek@ximbiot.com>

	* commit.c (precommit_list_to_args_proc), logmsg.c (do_editor), subr.c
	(format_cmdline), tag.c (pretag_list_to_args_proc):
	s/atribute/attribute/.
	(Report from Matthew Doar <matt@trpz.com>.)

2004-03-17  Derek Price  <derek@ximbiot.com>

	* subr.c (pathname_levels): Get it right this time.

2004-03-17  Derek Price  <derek@ximbiot.com>

	* subr.c (pathname_levels): Remove incorrect assertion and just
	return 0 when pathname is NULL.

2004-03-17  Derek Price  <derek@ximbiot.com>

	* subr.c (pathname_levels): Use ISDIRSEP() instead of strchr('/')
	and remove FIXME comment to that effect.

2004-03-16  Derek Price  <derek@ximbiot.com>

	* main.c (main): Update the --version Copyright (c) string to
	include 2004.

2004-03-15  Mark D. Baushke  <mdb@cvshome.org>

	* release.c (release): Add missing xmalloc of update_cmd.

2004-03-15  Derek Price  <derek@ximbiot.com>

	* release.c (release): Enable authentication and encryption for a child
	update process when necessary.
	(Original patch from Dan Russell <russelld@aol.net> via Hal Mahaffey
	<HMahaffey@aol.com>.)

2004-03-14  Derek Price  <derek@ximbiot.com>

	* add.c (add): Only call server_updated() when we actual have a new
	resurrected file for the client.

2004-03-14  Derek Price  <derek@ximbiot.com>

	* cvs.h (previous_rev, write_letter): New prototypes.
	(struct file_info): Move to before the write_letter prototype.
	* add.c (add): Allow resurrection of files which used to exist on a
	branch.
	* subr.c (previous_rev): New function.
	* update.c: Consolidate like pragmas.
	 (write_letter): Remove prototype.  Remove static declaration.