@@ -1,3 +1,9 @@
+2004-03-19  Mark D. Baushke  <mdb@cvshome.org>
+
+	* server.c (gserver_authenticate_connection): Handle large
+	GSSAPI packets dynamically.
+	(Bug report from Douglas Engert <DEEngert@anl.gov>)
+
 2004-03-19  Derek Price  <derek@ximbiot.com>
 
 	* cvs.h (pathname_levels, previous_rev): Remove leading underscore from
